# Ethereal

./: .gitignore  CMakeLists.txt  Ethereal.cpp  Ethereal.h  README.md
.github/: FUNDING.yml
Ethereal/: CMakeLists.txt  Ethereal.cpp  Ethereal.h  PointDef.h
Ethereal/Points/: PointDef.h
Ethereal/Vectors/: Vect3.hpp
Tests/: CMakeLists.txt  PointTest.cpp  main.cpp  test.cpp
cmake/: LibraryConfig.cmake  SetEnv.cmake
examples/: CMakeLists.txt
examples/SimplePointExample/: CMakeLists.txt  SimplePointExample.cpp
examples/SimplePointExample/Ethereal/: .ninja_deps  .ninja_log  CMakeLists.txt  Config.cmake.in  Ethereal.cpp  Ethereal.h  build.ninja  rules.ninja
examples/SimplePointExample/Ethereal/.cmake/api/v1/reply/: codemodel-v2-d8b570397d68429317d0.json  target-Ethereal-Debug-8bb38d574561b052fe44.json
examples/SimplePointExample/Ethereal/cmake/: EtheralTargets.cmake
examples_internal/: CMakeLists.txt
examples_internal/SimplePointExample/: CMakeLists.txt  SimplePointExample.cpp  SimplePointExample.h
scripts/: build_ninja.sh
